--- a/zookeeper-client-test/pom.xml
+++ b/zookeeper-client-test/pom.xml
@@ -14,6 +14,12 @@
       <artifactId>zookeeper</artifactId>
       <version>3.4.4-mdh1.1.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
   </dependencies>
 
 </project>
